deployment/dev-nomsbook-com.yml
# global resources used by the dev-nomsbook-com namespace, potentially shared by deployments
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "dev-nomsbook-com"
---
