deployment/noms-base.yml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "dev-nomsbook-com"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "noms-base-1"
  namespace: "dev-nomsbook-com"
  labels:
    app: "noms-base-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "noms-base-1"
  template:
    metadata:
      labels:
        app: "noms-base-1"
    spec:
      containers:
      - name: "noms-base"
        image: "corydodt/noms-base"
      serviceAccountName: noms-base
