deployment/noms-base-a.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: noms-base-1
  labels:
    app: noms-base-1
spec:
  template:
    metadata:
      labels:
        app: noms-base-1
        tier: web
    spec:
      containers:
      - name: noms-base-1
        image: gcr.io/noms-197618/noms-base
        ports:
        - containerPort: 8080
      serviceAccountName: noms-base
---
apiVersion: v1
kind: Service
metadata:
  name: noms-base-1-backend
  labels:
    app: noms-base-1
spec:
  type: NodePort
  selector:
    app: noms-base-1
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
