deployment/noms-base-a-no-tls.yml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "noms-base-1"
  namespace: "dev-nomsbook-com"
  labels:
    app: "noms-base-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "noms-base-1"
  template:
    metadata:
      labels:
        app: "noms-base-1"
    spec:
      containers:
      - name: "noms-base"
        image: "corydodt/noms-base"
        ports:
          - containerPort: 8080
      serviceAccountName: noms-base
---
apiVersion: v1
kind: Service
metadata:
  name: noms-base-1-backend
  namespace: dev-nomsbook-com
  labels:
    app: noms-base-1
spec:
  type: NodePort
  selector:
    app: noms-base-1
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dev-nomsbook-com
  name: noms-base-1
  annotations:
    kubernetes.io/ingress.global-static-ip-name: noms-base-1-ip
  labels:
    app: noms-base-1
spec:
  backend:
    serviceName: noms-base-1-backend
    servicePort: 8080
---
